# ArduinoSerialTalk

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
Backend/: ArduinoSerialWindow.cpp  ArduinoSerialWindow.h  CMakeLists.txt  ContextWindow.cpp  ContextWindow.h
Core/: CMakeLists.txt
SerialCommander/: CMakeLists.txt  SerialCommander.cpp  SerialCommander.h
Utilities/: CMakeLists.txt
